--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
   DeployDev:
     name: Deploy to Dev 
     #if: github.event_name == 'pull_request'
-    needs: [Build]
+    #needs: [Build]
     runs-on: dev-runner
     steps:
       - uses: actions/checkout@v2
