--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,14 @@ on:
   workflow_dispatch:
 
 jobs:
-    
+  Build:
+    runs-on: dev-runner
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Connection validation
+        run: pwd
+
   DeployDev:
     name: Deploy to Dev 
     #if: github.event_name == 'pull_request'
