--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,19 +8,11 @@ on:
   workflow_dispatch:
 
 jobs:
-  Build:
-    runs-on: dev-runner
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Connection validation
-        run: pwd
-
   DeployDev:
     name: Deploy to Dev 
     #if: github.event_name == 'pull_request'
     #needs: [Build]
-    runs-on: dev-runner
+    runs-on: test-runner-ec2-user
     steps:
       - uses: actions/checkout@v2
       - name: Deploy
@@ -30,7 +22,7 @@ jobs:
     name: Deploy to QA 
     #if: github.event.ref == 'refs/heads/main'
     needs: [DeployDev]
-    runs-on: qa-runner
+    runs-on: test-runner-ec2-user
     steps:
       - uses: actions/checkout@v2    
       - name: Deploy
