--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
     name: Deploy to QA 
     #if: github.event.ref == 'refs/heads/main'
     needs: [DeployDev]
-    runs-on: dev-runner
+    runs-on: qa-runner
     steps:
       - uses: actions/checkout@v2    
       - name: Deploy
