--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,9 @@ jobs:
     #needs: [Build]
     runs-on: dev-runner
     steps:
-      - uses: actions/checkout@v2
+      #- uses: actions/checkout@v2
       - name: Deploy
-        run: pwd && ifconfig
+        run: git pull origin main
     
   DeployQA:
     name: Deploy to QA 
@@ -24,6 +24,6 @@ jobs:
     needs: [DeployDev]
     runs-on: qa-runner
     steps:
-      - uses: actions/checkout@v2    
+      #- uses: actions/checkout@v2    
       - name: Deploy
-        run: pwd && ifconfig
+        run: git pull origin main
