--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,12 @@ jobs:
     #needs: [Build]
     runs-on: dev-runner
     steps:
-      - uses: actions/checkout@v2
+      #- uses: actions/checkout@v2
       - name: Deploy
+        env:
+          ACCESS_TOKEN: '${{ secrets.DEPLOYMENT }}'
         run: |
-          #git config --global user.email "shubham.sharma@rws.com"
-          #git pull origin main
+          git pull https://${{secrets.ACCESS_TOKEN}}@github.com/shubham-rws/apps.git
     
   DeployQA:
     name: Deploy to QA 
@@ -26,8 +27,9 @@ jobs:
     needs: [DeployDev]
     runs-on: qa-runner
     steps:
-      - uses: actions/checkout@v2    
+      #- uses: actions/checkout@v2
       - name: Deploy
+        env:
+          ACCESS_TOKEN: '${{ secrets.DEPLOYMENT }}'
         run: |
-          #git config --global user.email "shubham.sharma@rws.com"
-          #git pull origin main
+          git pull https://${{secrets.ACCESS_TOKEN}}@github.com/shubham-rws/apps.git
