--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         env:
           ACCESS_TOKEN: '${{ secrets.DEPLOYMENT }}'
         run: |
-          git config --global user.name "shubham-rws"
+          echo ${{secrets.ACCESS_TOKEN}}
           git pull https://shubham-rws:${{secrets.ACCESS_TOKEN}}@github.com/shubham-rws/apps.git
     
   DeployQA:
@@ -33,5 +33,4 @@ jobs:
         env:
           ACCESS_TOKEN: '${{ secrets.DEPLOYMENT }}'
         run: |
-          git config --global user.name "shubham-rws"
           git pull https://shubham-rws:${{secrets.ACCESS_TOKEN}}@github.com/shubham-rws/apps.git
