--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
     needs: [DeployQA]
     runs-on: prod-runner
     steps:
-      - uses: actions/checkout@v2
+      #- uses: actions/checkout@v2
       - name: Deploy
         env:
           ACCESS_TOKEN: '${{ secrets.DEPLOYMENT }}'
