--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,11 +45,14 @@ jobs:
       - name: Deploy
         env:
           ACCESS_TOKEN: '${{ secrets.DEPLOYMENT }}'
+          ASGKEY: '${{ secrets.ASGKEY }}'
         run: |
           git pull https://shubham-rws:${{secrets.DEPLOYMENT}}@github.com/shubham-rws/apps.git
+          echo '${{ secrets.ASGKEY }}' > /data/websites/ASGKEY.pem && chmod 400 /data/websites/ASGKEY.pem
           INSTANCE_IDS=$(aws autoscaling describe-auto-scaling-groups --region us-east-2 --auto-scaling-group-names prod-runner-from-dev-stage-cicd | jq --raw-output '.AutoScalingGroups[0].Instances | map(.InstanceId) | join(";")')
           export IFS=";"
           for instance_id in $INSTANCE_IDS; do \
           INSTANCE_IP_ADDRESS=$(aws ec2 describe-instances --region us-east-2 --instance-ids $instance_id | jq --raw-output '.Reservations[0].Instances[0].PublicIpAddress'); \
           echo "Deploying to $INSTANCE_IP_ADDRESS..."; \
+          ssh -oStrictHostKeyChecking=no -i /data/websites/ASGKEY.pem ec2-user@"$INSTANCE_IP_ADDRESS" pwd && ifconfig; \
           done
