--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,8 @@ jobs:
           ACCESS_TOKEN: '${{ secrets.DEPLOYMENT }}'
         run: |
           echo ${{secrets.DEPLOYMENT}}
-          git stash | true
-          git stash drop | true
+          git stash || true
+          git stash drop || true
           git pull https://shubham-rws:${{secrets.DEPLOYMENT}}@github.com/shubham-rws/apps.git
     
   DeployQA:
@@ -35,8 +35,8 @@ jobs:
         env:
           ACCESS_TOKEN: '${{ secrets.DEPLOYMENT }}'
         run: |
-          git stash | true
-          git stash drop | true
+          git stash || true
+          git stash drop || true
           git pull https://shubham-rws:${{secrets.DEPLOYMENT}}@github.com/shubham-rws/apps.git    
   DeployPROD:
     name: Deploy to PROD 
@@ -50,8 +50,8 @@ jobs:
           ACCESS_TOKEN: '${{ secrets.DEPLOYMENT }}'
           #ASGKEY: '${{ secrets.ASGKEY }}'
         run: |
-          git stash | true
-          git stash drop | true
+          git stash || true
+          git stash drop || true
           git pull https://shubham-rws:${{secrets.DEPLOYMENT}}@github.com/shubham-rws/apps.git
           echo '${{ secrets.ASGKEY }}' > /data/websites/prod-runner/ASGKEY.pem && chmod 400 /data/websites/prod-runner/ASGKEY.pem
           INSTANCE_IDS=$(aws autoscaling describe-auto-scaling-groups --region us-east-2 --auto-scaling-group-names prod-runner-from-dev-stage-cicd-LB | jq --raw-output '.AutoScalingGroups[0].Instances | map(.InstanceId) | join(";")')
@@ -59,6 +59,6 @@ jobs:
           for instance_id in $INSTANCE_IDS; do \
           INSTANCE_IP_ADDRESS=$(aws ec2 describe-instances --region us-east-2 --instance-ids $instance_id | jq --raw-output '.Reservations[0].Instances[0].PrivateIpAddress'); \
           echo "Deploying to $INSTANCE_IP_ADDRESS..."; \
-          ssh -oStrictHostKeyChecking=no -i /data/websites/prod-runner/ASGKEY.pem ec2-user@"$INSTANCE_IP_ADDRESS" pwd && ifconfig cd /data/websites/prod-runner/wp-build/apps/apps/ && sudo su - devdataaxle && git stash | true && git stash drop | true && git pull https://shubham-rws:${{secrets.DEPLOYMENT}}@github.com/shubham-rws/apps.git && ls -ltr /data/websites/prod-runner/wp-build/apps/apps/backend/projects/wordpress/dataaxlecanada.ca/wp-content ; \
+          ssh -oStrictHostKeyChecking=no -i /data/websites/prod-runner/ASGKEY.pem ec2-user@"$INSTANCE_IP_ADDRESS" pwd && ifconfig cd /data/websites/prod-runner/wp-build/apps/apps/ && sudo su - devdataaxle && git stash || true && git stash drop || true && git pull https://shubham-rws:${{secrets.DEPLOYMENT}}@github.com/shubham-rws/apps.git && ls -ltr /data/websites/prod-runner/wp-build/apps/apps/backend/projects/wordpress/dataaxlecanada.ca/wp-content ; \
           done
 
