--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,13 +61,13 @@ jobs:
           for instance_id in $INSTANCE_IDS; do \
           INSTANCE_IP_ADDRESS=$(aws ec2 describe-instances --region us-east-2 --instance-ids $instance_id | jq --raw-output '.Reservations[0].Instances[0].PrivateIpAddress'); \
           echo "Deploying to $INSTANCE_IP_ADDRESS..."; \
-          ssh -oStrictHostKeyChecking=no -i /data/websites/prod-runner/ASGKEY.pem ec2-user@"$INSTANCE_IP_ADDRESS" <<'ENDSSH'
+          ssh -oStrictHostKeyChecking=no -i /data/websites/prod-runner/ASGKEY.pem ec2-user@"$INSTANCE_IP_ADDRESS" '''
           pwd && ifconfig 
           cd /data/websites/prod-runner/wp-build/apps/apps/ && sudo su - devdataaxle
           git stash || true
           git stash drop || true
           git pull https://shubham-rws:${{secrets.DEPLOYMENT}}@github.com/shubham-rws/apps.git
           du -h /data/websites/prod-runner/wp-build/apps/apps/backend/projects/wordpress/dataaxlecanada.ca/wp-content/themes --max-depth=1 
-          ENDSSH ; \
+          ''' ; \
           done
 
