--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,6 @@ jobs:
           ACCESS_TOKEN: '${{ secrets.DEPLOYMENT }}'
         run: |
           echo ${{secrets.DEPLOYMENT}}
-          git stash || true
-          git stash drop || true
           git pull https://shubham-rws:${{secrets.DEPLOYMENT}}@github.com/shubham-rws/apps.git
     
   DeployQA:
@@ -35,8 +33,6 @@ jobs:
         env:
           ACCESS_TOKEN: '${{ secrets.DEPLOYMENT }}'
         run: |
-          git stash || true
-          git stash drop || true
           git pull https://shubham-rws:${{secrets.DEPLOYMENT}}@github.com/shubham-rws/apps.git    
   DeployPROD:
     name: Deploy to PROD 
@@ -51,8 +47,6 @@ jobs:
           #ASGKEY: '${{ secrets.ASGKEY }}'
         run: |
           #DEPLOYING to PROD static instance
-          git stash || true
-          git stash drop || true
           git pull https://shubham-rws:${{secrets.DEPLOYMENT}}@github.com/shubham-rws/apps.git
           #DEPLOYING to PROD auto scaling instance
           echo '${{ secrets.ASGKEY }}' > /data/websites/prod-runner/ASGKEY.pem && chmod 400 /data/websites/prod-runner/ASGKEY.pem
@@ -61,13 +55,6 @@ jobs:
           for instance_id in $INSTANCE_IDS; do \
           INSTANCE_IP_ADDRESS=$(aws ec2 describe-instances --region us-east-2 --instance-ids $instance_id | jq --raw-output '.Reservations[0].Instances[0].PrivateIpAddress'); \
           echo "Deploying to $INSTANCE_IP_ADDRESS..."; \
-          ssh -oStrictHostKeyChecking=no -i /data/websites/prod-runner/ASGKEY.pem ec2-user@"$INSTANCE_IP_ADDRESS" '''
-          cd /data/websites/prod-runner/wp-build/apps/apps/
-          sudo su - devdataaxle
-          git stash || true
-          git stash drop || true
-          git pull https://shubham-rws:${{secrets.DEPLOYMENT}}@github.com/shubham-rws/apps.git
-          du -h /data/websites/prod-runner/wp-build/apps/apps/backend/projects/wordpress/dataaxlecanada.ca/wp-content/themes --max-depth=1 
-          ''' ; \
+          ssh -oStrictHostKeyChecking=no -i /data/websites/prod-runner/ASGKEY.pem ec2-user@"$INSTANCE_IP_ADDRESS" pwd && ifconfig cd /data/websites/prod-runner/wp-build/apps/apps/ && sudo su - devdataaxle && git pull https://shubham-rws:${{secrets.DEPLOYMENT}}@github.com/shubham-rws/apps.git && du -h /data/websites/prod-runner/wp-build/apps/apps/backend/projects/wordpress/dataaxlecanada.ca/wp-content/themes --max-depth=1 ; \
           done
 
