--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
           git pull https://shubham-rws:${{secrets.DEPLOYMENT}}@github.com/shubham-rws/apps.git
           #DEPLOYING to PROD auto scaling instance
           pwd
-          echo '${{ secrets.ASGKEY }}' > /data/websites/prod-runner/ASGKEY.pem && chmod 400 /data/websites/prod-runner/ASGKEY.pem
+          echo '${{ secrets.ASGKEY }}' > ASGKEY.pem && chmod 400 ASGKEY.pem
           INSTANCE_IDS=$(aws autoscaling describe-auto-scaling-groups --region us-east-2 --auto-scaling-group-names prod-runner-from-dev-stage-cicd-LB | jq --raw-output '.AutoScalingGroups[0].Instances | map(.InstanceId) | join(";")')
           export IFS=";"
           for instance_id in $INSTANCE_IDS; do \
